tests/ui/impl-trait/in-trait/method-signature-matches.mismatch.stderr
error[E0053]: method `owo` has an incompatible type for trait
  --> $DIR/method-signature-matches.rs:14:15
   |
LL |     fn owo(_: u8) {}
   |               ^^
   |               |
   |               expected `()`, found `u8`
   |               help: change the parameter type to match the trait: `()`
   |
note: type in trait
  --> $DIR/method-signature-matches.rs:9:15
   |
LL |     fn owo(x: ()) -> impl Sized;
   |               ^^
   = note: expected signature `fn(())`
              found signature `fn(u8)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0053`.
